--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/mqtt/dist/mqtt.min.js"
             ]
           },
           "configurations": {
