--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap-icons": "^1.10.3",
     "crypto-js": "^4.2.0",
     "leaflet": "^1.9.4",
+    "mqtt": "^5.10.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
