--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "~15.2.11",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.12",
     "jasmine-core": "~4.5.0",
