update new database

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "^15.2.0",
     "@line/liff": "^2.24.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@types/leaflet.markercluster": "^1.5.5",
     "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "crypto-js": "^4.2.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "mqtt": "^5.10.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
