--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/router": "^15.2.0",
     "@line/liff": "^2.24.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@turf/turf": "^7.1.0",
     "@types/leaflet.markercluster": "^1.5.5",
     "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "crypto-js": "^4.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-editable": "^1.3.0",
     "leaflet.markercluster": "^1.5.3",
     "mqtt": "^5.10.1",
     "rxjs": "~7.8.0",
@@ -42,7 +45,8 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
-    "@types/leaflet": "^1.9.12",
+    "@types/leaflet": "^1.9.14",
+    "@types/leaflet-draw": "^1.0.11",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
